--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">Sign in</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -25,5 +24,7 @@
     <string name="add_dialog_title">Add Event</string>
     <string name="add_dialog_toggle_on">Yes</string>
     <string name="add_dialog_toggle_off">No</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="back_button_exit_toast">Press the back button once again to close the application.</string>
 
 </resources>
