--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,10 @@
     <string name="add_dialog_toggle_off">No</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="back_button_exit_toast">Press the back button once again to close the application.</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="user_profile_dialog_title">User Profile</string>
+    <string-array name="sex_array">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
 </resources>
